<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Together</string>
    <string name="menu_settings">Settings</string>
    <string name="main_food">附近美食</string>
    <string name="main_restaurant">附近餐厅</string>
    <string name="main_camera">相机</string>
    <string name="main_circle">朋友圈</string>
    <string name="main_recipe">我的食谱</string>
    
    <dimen name="bottom_tab_padding_drawable">2.0dip</dimen>
    <dimen name="bottom_tab_padding_up">5.0dip</dimen>
    <dimen name="bottom_tab_font_size">10.0dip</dimen>
    
    <item type="drawable" name="transparent">#00000000</item>
    <string name="myrecipe_trends">我的动态</string>
    <string name="myrecipe_like">喜欢的美食</string>
    <string name="myrecipe_store">收藏的餐厅</string>
    <string name="myrecipe_invite">发出的邀请</string>
    <string name="myrecipe_invited">收到的邀请</string>
    
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
        <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="login_button_text">登陆绑定微博账号</string>
    <string name="setting_change_city_text">切换城市：</string>
    <string name="setting_bind_sina">新浪微博</string>
    <string name="setting_receive_push">接收推送</string>
    <string name="setting_new">检测新版本</string>
    <string name="setting_aboutus">关于我们</string>
    
    <string name="food_detail">美食详情</string>
    <string name="food_detail_location">洪山区珞瑜路1037号华中科技大学</string>
    
    <string name="invitedetail_invite">邀请</string>
    <string name="invitedetail_invite_goeat">等一起去吃</string>
    <string name="invitedetail_tuan">点击查看团购</string>
    
    <string name="restaurantdetail_title">餐厅详情</string>
    
    <string name="sendphoto_name_hint">名字</string>
    <string name="sendphoto_des_hint">把你的心情写下来吧。。。</string>
    <string name="sendphoto_location_text">点击添加定位</string>

</resources>