<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/myrecipe_title"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/main_recipe"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/myrecipe_head"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/myrecipe_title"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/empty_photo" />

    <TextView
        android:id="@+id/myrecipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/myrecipe_head"
        android:layout_marginLeft="42dp"
        android:layout_toRightOf="@+id/myrecipe_head"
        android:text="用户名XXXX"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/myrecipe_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/myrecipe_head"
        android:layout_alignLeft="@+id/myrecipe_name"
        android:text="所在地XXXXX"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:id="@+id/myrecipe_trends"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/myrecipe_head" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:text="@string/myrecipe_trends"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="42dp"
            android:src="@drawable/bear_click" />
    </RelativeLayout>

    <Button
        android:id="@+id/myrecipe_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/myrecipe_city"
        android:text="@string/myrecipe_like" />

    <Button
        android:id="@+id/myrecipe_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/myrecipe_like"
        android:layout_alignBottom="@+id/myrecipe_like"
        android:layout_alignLeft="@+id/myrecipe_city"
        android:layout_marginLeft="45dp"
        android:text="@string/myrecipe_store" />

    <Button
        android:id="@+id/myrecipe_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myrecipe_like"
        android:layout_below="@+id/myrecipe_like"
        android:layout_marginTop="44dp"
        android:text="@string/myrecipe_invite" />

    <Button
        android:id="@+id/myrecipe_invited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/myrecipe_invite"
        android:layout_alignBottom="@+id/myrecipe_invite"
        android:layout_alignLeft="@+id/myrecipe_store"
        android:text="@string/myrecipe_invited" />

</RelativeLayout>